# pal

./: .flake8  .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  pyproject.toml
src/pal/: cli.py  db.py  setup.py
src/pal/models/: entry.py
