[tool.poetry]
name = "pal"
version = "0.1.0"
description = "Personal Activity Log"
authors = ["Alvaro Clemente <clemente.varo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
pal = 'pal.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
typer = {version = "^0.7.0", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pytest = "*"

[tool.poetry.group.lsp]
optional = true

[tool.poetry.group.lsp.dependencies]
python-lsp-server = {extras = ["all"], version = "*"}
mypy-ls = "*"
pyls-flake8 = "*"
pyls-isort = "*"
python-lsp-black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
