[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pal"
description = "Personal Activity Log"
version = "0.0.1"
authors = [
    {name = "Alvaro Clemente", email = "clemente.varo@gmail.com"},
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.7.0",
    "rich>=13.6.0",
    "pydantic>=1.10.4",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
    "python-lsp-server",
    "python-lsp-black",
    "pylsp-mypy",
    "pyls-isort",
]

[project.scripts]
pal = 'pal.cli:run'


[tool.setuptools.packages.find]
where = ["src"]
